--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LoginLanding</string>
+    <string name="usernameHint">Enter your username</string>
+    <string name="passwordHint">Enter your password</string>
+    <string name="loginButton">Login</string>
 </resources>
