--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="usernameHint">Enter your username</string>
     <string name="passwordHint">Enter your password</string>
     <string name="loginButton">Login</string>
+    <string name="welcomePlaceholder">Welcome, User No. 1: Test</string>
 </resources>
